kubernetes/main/apps/default/miniflux/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: default
  labels:
    app: miniflux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
      - name: miniflux
        image: ghcr.io/miniflux/miniflux:2.0.50@sha256:759712dd554234b28b229bb9695f31e99b4771018d2ccefdd825a1ebe66ee219
        ports:
          - containerPort: 8080
            name: http-miniflux
        resources:
          requests:
            cpu: 12m
            memory: 64M
          limits:
            memory: 256M
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
          httpGet:
            path: /healthcheck
            port: 8080
