kubernetes/main/apps/default/miniflux/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: default
spec:
  selector:
    app: miniflux
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-miniflux
