kubernetes/main/apps/default/miniflux/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    cert-manager.io/common-name: miniflux.home.arpa
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/24,10.0.0.0/8
spec:
  tls:
    - hosts:
      - miniflux.home.arpa
      secretName: miniflux-ing-cert
  ingressClassName: nginx
  rules:
  - host: miniflux.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: miniflux
            port:
              number: 8080
